--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,24 +1,39 @@
+<nav class="navbar-lewagon navbar-light">
+  <form class="form-inline">
+    <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="100px">
+    <h2><strong>Sans alcool, la fête est plus folle !</strong></h2>
+  </form>
+</nav>
+
 <hr>
-  <div class="container">
-    <div class="row justify-content-center">
-      <img src="https://source.unsplash.com/user/arobj/800x400" style="border-radius:5px" style="box-shadow: 10px">
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-4">
+      <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" height="250px" style="border-radius:5px" style="box-shadow: 10px">
     </div>
-    <br>
-    <div class="row justify-content-center" >
-      <h1><strong>🍸 <%= @cocktail.name.capitalize %>🍸</strong> </h1>
+    <div class="col-sm-4">
+      <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" height="250px" style="border-radius:5px" style="box-shadow: 10px">
     </div>
-    <div class="row justify-content-center" >
-      <h5> <strong>Description :</strong> <%= @cocktail.description %></h5>
-    </div>
-    <div class="row justify-content-center" >
-      <h5> <strong>Ingredients : </strong>
-        <% @cocktail.doses.each do |dose| %>
-        <%= dose.ingredient.name %> <%= dose.quantity %> <%= dose.unit %>
-      <% end %></h5>
-    </div>
-    <div class="row justify-content-center">
-      <button class="btn btn-info" style="margin:10px"> <%=link_to 'Add ingredient', new_cocktail_dose_path(@cocktail)%> </button>
-      <button class="btn btn-dark" style="margin:10px"> <%=link_to 'Back to list', cocktails_path%> </button>
+    <div class="col-sm-4">
+      <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" height="250px" style="border-radius:5px" style="box-shadow: 10px">
     </div>
   </div>
+  <br>
+  <div class="row justify-content-center" >
+    <h1><strong>🍸 <%= @cocktail.name.capitalize %>🍸</strong> </h1>
+  </div>
+  <div class="row justify-content-center" >
+    <h5> <strong>Description :</strong> <%= @cocktail.description %></h5>
+  </div>
+  <div class="row justify-content-center" >
+    <h5> <strong>Ingredients : </strong>
+      <% @cocktail.doses.each do |dose| %>
+      <%= dose.ingredient.name %> <%= dose.quantity %> <%= dose.unit %>
+    <% end %></h5>
+  </div>
+  <div class="row justify-content-center">
+    <button class="btn btn-info" style="margin:10px"> <%=link_to 'Add ingredient', new_cocktail_dose_path(@cocktail)%> </button>
+    <button class="btn btn-dark" style="margin:10px"> <%=link_to 'Back to list', cocktails_path%> </button>
+  </div>
+</div>
 </hr>
