--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,12 +7,9 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "aos/src/sass/aos";
+@import "site";
 
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-
-body {
-  background-color: white;
-  color: #0D2948;
-}
