--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,39 +1,57 @@
-<nav class="navbar-lewagon navbar-light">
-  <form class="form-inline">
-    <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="100px">
-    <h2><strong>Sans alcool, la fête est plus folle !</strong></h2>
+<nav class="navbar navbar-lewagon navbar-light justify-content-between">
+  <form>
+    <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="75px">
+  </form>
+  <form class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="search" placeholder="Your cocktail" aria-label="Search">
+    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
   </form>
 </nav>
 
-<hr>
+<br>
+<br>
+<div class="row justify-content-center" >
+  <h1><strong>🍸 <%= @cocktail.name.capitalize %>🍸</strong> </h1>
+</div>
+<br>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-sm-4">
-      <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" height="250px" style="border-radius:5px" style="box-shadow: 10px">
+      <div data-aos="flip-left">
+        <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width ="375px" style="border-radius:5px" style="box-shadow: 10px">
+      </div>
     </div>
     <div class="col-sm-4">
-      <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" height="250px" style="border-radius:5px" style="box-shadow: 10px">
+      <div data-aos="flip-left">
+        <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="375px" style="border-radius:5px" style="box-shadow: 10px">
+      </div>
     </div>
     <div class="col-sm-4">
-      <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" height="250px" style="border-radius:5px" style="box-shadow: 10px">
+      <div data-aos="flip-left">
+        <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="375px" style="border-radius:5px" style="box-shadow: 10px">
+      </div>
     </div>
   </div>
   <br>
+
   <div class="row justify-content-center" >
-    <h1><strong>🍸 <%= @cocktail.name.capitalize %>🍸</strong> </h1>
-  </div>
-  <div class="row justify-content-center" >
-    <h5> <strong>Description :</strong> <%= @cocktail.description %></h5>
-  </div>
-  <div class="row justify-content-center" >
-    <h5> <strong>Ingredients : </strong>
+    <div class="col-sm-8">
+      <h5> <strong>Description :</strong> <%= @cocktail.description %></h5>
+    <br>
+    </div>
+    <div class="col-sm-4">
+      <h5> <strong>Ingredients : </strong>
       <% @cocktail.doses.each do |dose| %>
       <%= dose.ingredient.name %> <%= dose.quantity %> <%= dose.unit %>
-    <% end %></h5>
+      <% end %></h5>
+    <br>
+    </div>
   </div>
   <div class="row justify-content-center">
+    <button class="btn btn-warning" style="margin:10px"> <%=link_to 'Edit cocktail', edit_cocktail_path(@cocktail)%> </button>
     <button class="btn btn-info" style="margin:10px"> <%=link_to 'Add ingredient', new_cocktail_dose_path(@cocktail)%> </button>
     <button class="btn btn-dark" style="margin:10px"> <%=link_to 'Back to list', cocktails_path%> </button>
   </div>
+  <br>
+  <br>
 </div>
-</hr>
