--- a/app/views/cocktails/home.html.erb
+++ b/app/views/cocktails/home.html.erb
@@ -6,16 +6,15 @@
 </div>
 <div class="container">
   <div class="row justify-content-center">
-   <iframe class="margin5" width="1200" height="360" src="https://www.youtube.com/embed/Lph-H0JOjGY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe class="margin-sm" width="1200" height="360" src="https://www.youtube.com/embed/Lph-H0JOjGY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
 </div>
 <br>
 <div class="container">
   <div class="row justify-content-center">
-    <button class="btn btn-info btn-lg"> <%=link_to '🍸 Get drunk 🍸', cocktails_path %> </button>
+    <button class="btn btn-info btn-lg"> <%=link_to '🍸 GET THE PARTY STARTED 🍸', cocktails_path %> </button>
   </div>
 </div>
 <br>
 <br>
-
 
