--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,19 +8,25 @@
     <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="75px">
   </form>
   <form class="form-inline my-2 my-lg-0">
-   <button class="btn btn-info"> <%=link_to '➕ Add new cocktail', new_cocktail_path%> </button>
+    <button class="btn btn-info"> <%=link_to '➕ Add new cocktail', new_cocktail_path%> </button>
+    <div style="margin: 5px"> </div>
+    <img class="avatar-bordered" src="https://avatars1.githubusercontent.com/u/50453385?s=460&v=4" width="100px">
   </form>
 
 </nav>
+<br>
+<div class="container" style="text-align: center">
+  <h1><strong>Pick a cocktail</strong> </h1>
+</div>
 <br>
 <div class="container">
   <div class="row justify-content-center">
     <% @cocktails.each do |cocktail| %>
         <div class="col-sm-4">
           <div data-aos="flip-down">
-            <img src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="350px" height="180px" style="border-radius:4px" class="shadow p-1 bg-info rounded " class="margin-sm">
+            <img id="zoom" src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="350px" style="border-radius:4px" class="shadow p-1 bg-info rounded" class="margin-sm">
           </div>
-          <h3 class="margin-sm"> <strong><%= cocktail.name %></strong></h3>
+          <h2 class="margin-sm"> <strong><%= cocktail.name %></strong></h2>
            <button class="btn btn-info"> <%=link_to 'See receipe', cocktail_path(cocktail)%> </button>
           <br>
           <br>
@@ -30,3 +36,4 @@
   </div>
   <br>
 </div>
+
