fixed new cocktail and bg

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -1,7 +1,7 @@
 html, body {
   background: linear-gradient(360deg, #5b8ddc 0%, #8993c3 16%, #a89aaa 33%, #c0a191 50%, #d4a876 66%, #e6b058 83%, #f6b833 100%);
   color: #0D2948;
-  min-height: 100%;
+  min-height: 100vh;
   font-family: $body-font;
 }
 
