--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -12,7 +12,7 @@
   <%= f.input :name %>
   <%= f.input :description %>
   <%= f.submit class: "btn btn-success" %>
-  <button class="btn btn-dark" style="margin:10px"> <%=link_to 'Discard changes ', cocktail_path(@cocktail)%> </button>
+  <button class="btn btn-dark" style="margin:10px"> <%=link_to 'Discard changes ', cocktails_path%> </button>
 <% end %>
 </div>
 </hr>
