--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -24,7 +24,7 @@
     <% @cocktails.each do |cocktail| %>
         <div class="col-sm-4">
           <div data-aos="flip-down">
-            <img id="zoom" src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="350px" style="border-radius:4px" class="shadow p-1 bg-info rounded" class="margin-sm">
+            <img id="zoom" src="https://source.unsplash.com/search/photos/cocktail/400x300" style="border-radius:4px" class="shadow p-1 bg-info rounded" class="margin-sm">
           </div>
           <h2 class="margin-sm"> <strong><%= cocktail.name %></strong></h2>
            <button class="btn btn-info"> <%=link_to 'See receipe', cocktail_path(cocktail)%> </button>
