--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -14,6 +14,12 @@ h2 {
   color: white;
 }
 
+img {
+
+  border-radius: 4px;
+  box-shadow: 10px
+}
+
 .margin-sm {
   margin: 5px;
   border-radius: 4px;
@@ -26,5 +32,5 @@ h2 {
 
 #zoom:hover {
   transition: transform 1s;
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
