--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,6 +1,7 @@
   <%= simple_form_for [@cocktail] do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%= f.submit class: "btn btn-success" %>
     <button class="btn btn-dark" style="margin:10px"> <%=link_to 'Discard changes ', cocktail_path(@cocktail)%> </button>
   <% end %>
