--- a/app/views/cocktails/home.html.erb
+++ b/app/views/cocktails/home.html.erb
@@ -1,7 +1,9 @@
 <br>
 <div class="container">
   <div class="row justify-content-center">
-    <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="200px">
+    <%=link_to home_path do %>
+      <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="200px">
+    <%end %>
    </div>
 </div>
 <div class="container">
