--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,8 +5,10 @@
     <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
   </form>
   <form>
-    <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="75px">
-  </form>
+    <%=link_to cocktails_path do %>
+      <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="75px">
+    <%end %>
+  </form >
   <form class="form-inline my-2 my-lg-0">
     <button class="btn btn-info"> <%=link_to '➕ Add new cocktail', new_cocktail_path%> </button>
     <div style="margin: 5px"> </div>
@@ -24,7 +26,7 @@
     <% @cocktails.each do |cocktail| %>
         <div class="col-sm-4">
           <div data-aos="flip-down">
-            <img id="zoom" src="https://source.unsplash.com/search/photos/cocktail/400x300" style="border-radius:4px" class="shadow p-1 bg-info rounded" class="margin-sm">
+            <img id="zoom" src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="375px" style="border-radius:4px" class="shadow p-1 bg-info rounded" class="margin-sm">
           </div>
           <h2 class="margin-sm"> <strong><%= cocktail.name %></strong></h2>
            <button class="btn btn-info"> <%=link_to 'See receipe', cocktail_path(cocktail)%> </button>
