fixed minor style issues, fixed navbar, change show cards and ingredients layout

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -9,7 +9,7 @@ h1 {
   font-family: $headers-font;
 }
 
-h2 {
+h2,h3 {
   font-family: $headers-font;
   color: white;
 }
@@ -19,6 +19,18 @@ img {
   border-radius: 4px;
   box-shadow: 10px
 }
+
+
+a:link {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
 
 .margin-sm {
   margin: 5px;
@@ -33,4 +45,17 @@ img {
 #zoom:hover {
   transition: transform 1s;
   transform: scale(1.1);
+}
+
+#nav-text {
+  color:#F6B833;
+}
+
+#add-ingredient {
+  color:#F6B833;
+}
+
+li {
+  display:inline-block;
+  height:5px;
 }
