--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,13 +1,16 @@
-<nav class="navbar-lewagon navbar-light">
-  <form class="form-inline">
-    <%=link_to cocktails_path do %>
-      <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="100px">
-    <%end %>
-    <h2><strong>Sans alcool, la fête est plus folle !</strong></h2>
-  </form>
+<nav class="navbar navbar-expand-sm navbar-light" style="background-color: #0D2848;">
+    <div class="navbar-collapse" id="navbarToggler" style="justify-content:space-between">
+      <%=link_to cocktails_path do %>
+        <h4 id="nav-text"> 🍹 Mister Cocktail  </h4>
+      <%end %>
+      <%=link_to cocktails_path do %>
+      <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="65px">
+      <%end %>
+  </div>
 </nav>
 
-<hr>
+<br>
+
 <div class="container">
   <h1><strong>New Cocktail</strong></h1>
   <%= simple_form_for [@cocktail] do |f| %>
@@ -19,5 +22,4 @@
   <button class="btn btn-dark" style="margin:10px"> <%=link_to 'Discard changes ', cocktails_path%> </button>
 <% end %>
 </div>
-</hr>
 
