--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,69 +1,64 @@
-<nav class="navbar navbar-lewagon navbar-light justify-content-between">
- <form>
-    <%=link_to cocktails_path do %>
-    <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="75px">
-    <%end %>
-  </form >
-  <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Your cocktail" aria-label="Search">
-    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-  </form>
+<nav class="navbar navbar-expand-sm navbar-light" style="background-color: #0D2848;">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="collapse navbar-collapse" id="navbarToggler" style="justify-content:space-between">
+      <%=link_to cocktails_path do %>
+        <h4 id="nav-text"> 🍹 Mister Cocktail  </h4>
+      <%end %>
+      <%=link_to cocktails_path do %>
+      <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="65px">
+      <%end %>
+  </div>
 </nav>
 
 <br>
 <br>
-<div class="row justify-content-center" >
+
+<div class="row justify-content-center flex-wrap" >
   <h1><strong>🍸 <%= @cocktail.name.capitalize %>🍸</strong> </h1>
 </div>
 <br>
+
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-sm-4">
-      <div data-aos="flip-left">
-        <img id="zoom" class="shadow p-1 bg-info rounded" src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="350px">
-      </div>
+  <div class="row justify-content-around " style="padding:20px">
+    <div class="col-sm-4" data-aos="flip-left">
+      <img id="zoom" class="img-fluid shadow p-1 bg-info rounded" src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="350px">
     </div>
-    <div class="col-sm-4">
-      <div data-aos="flip-left">
-        <img id="zoom" class="shadow p-1 bg-info rounded" src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="350px">
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div data-aos="flip-left">
-        <img id="zoom" class="shadow p-1 bg-info rounded" src="https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80" width="350px">
-      </div>
-    </div>
-  </div>
-  <br>
-
-  <div class="container">
-    <div class="row justify-content-center" >
-      <div class="col-sm-8">
-        <h5> <strong>Description :</strong> <%= @cocktail.description %></h5>
+    <br>
+    <div class="col-sm-8" style="padding:20px 0px 0px 20px">
+      <h5> <strong>Description :</strong> <%= @cocktail.description %></h5>
       <br>
-      </div>
-      <div class="col-sm-4">
-        <h5> <strong>Ingredients : </strong></h5>
-        <% @cocktail.doses.each do |dose| %>
-          <ul>
-            <li>
-              <%= dose.ingredient.name %> <%=dose.quantity%><%=dose.unit%>
-              <%=link_to dose_path(dose.id), method: :delete, data: { confirm: "Are you sure?" } do %>
-              <i class="fas fa-trash-alt"></i>
-              <% end %>
-            </li>
-          </ul>
+        <% if @cocktail.doses.empty? %>
+          <button class="btn btn-info btn-xs"> <%=link_to 'Add ingredient', new_cocktail_dose_path(@cocktail)%> <i class="fas fa-plus-circle"></i>
+          </button>
+        <% else %>
+          <h5> <strong>Ingredients : </strong></h5>
+          <% @cocktail.doses.each do |dose| %>
+
+            <ul>
+              <li>
+                <h6> <%= dose.ingredient.name %> ( <%=dose.quantity%> <%=dose.unit%> )
+                <%=link_to dose_path(dose.id), method: :delete, data: { confirm: "Are you sure?" } do %>
+                <i class="fas fa-trash-alt"></i>
+              </li>
+              <% end %></h6>
+            </ul>
+            <% end %>
+            <ul>
+              <button class="btn btn-info btn-xs"> <%=link_to 'Add ingredient', new_cocktail_dose_path(@cocktail)%> <i class="fas fa-plus-circle"></i>
+              </button>
+            </ul>
         <% end %>
-      <br>
-      </div>
+    <br>
     </div>
   </div>
+</div>
 
-  <div class="row justify-content-center">
-    <button class="btn btn-warning" style="margin:10px"> <%=link_to 'Edit cocktail', edit_cocktail_path(@cocktail)%> </button>
-    <button class="btn btn-info" style="margin:10px"> <%=link_to 'Add ingredient', new_cocktail_dose_path(@cocktail)%> </button>
-    <button class="btn btn-dark" style="margin:10px"> <%=link_to 'Back to list', cocktails_path%> </button>
-  </div>
+<div class="row justify-content-center">
+  <button class="btn btn-warning btn-lg" style="margin:5px"> <%=link_to 'Edit cocktail', edit_cocktail_path(@cocktail)%> </button>
+  <button class="btn btn-dark btn-lg" style="margin:5px"> <%=link_to 'Back to list', cocktails_path%> </button>
+</div>
   <br>
   <br>
 </div>
