--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,11 +1,16 @@
-<nav class="navbar-lewagon navbar-light">
-  <form class="form-inline">
-    <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="100px">
-    <h2><strong>Sans alcool, la fête est plus folle !</strong></h2>
-  </form>
+<nav class="navbar navbar-expand-sm navbar-light" style="background-color: #0D2848;">
+    <div class="navbar-collapse" id="navbarToggler" style="justify-content:space-between">
+      <%=link_to cocktails_path do %>
+        <h4 id="nav-text"> 🍹 Mister Cocktail  </h4>
+      <%end %>
+      <%=link_to cocktails_path do %>
+      <img src="https://images.vexels.com/media/users/3/144120/isolated/preview/4eff3df3a5d6f917f98ba7917ee40011-neon-cocktails-sign-by-vexels.png" width="65px">
+      <%end %>
+  </div>
 </nav>
 
-<hr>
+
+<br>
 <div class="container">
 
   <h1>Add ingredient</h1>
@@ -19,4 +24,3 @@
   <% end %>
 
 </div>
-</hr>
