fixed typed js header

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,17 +10,19 @@
 
 <br>
 <div class="container" style="text-align: left">
-  <h1> Wanna try our <strong><span class="type" style="background-color: #0D2848; color:#F8C559"> </span ></strong></h1>
+  <h1 id="typed"> Wanna try </h1>
+  <h1>  our <strong><span class="type" style="background-color: #0D2848; color:#F8C559"> </span ></strong></h1>
   <script >
     var typed = new Typed(".type", {
     strings: [
-    "first",
-    "Whisky sour ? 🥃",
-    "Tequila Sunrise ? 🍹",
-    "Pornstar Martini 🍸 ? "
+    "first ^1000",
+    "Whisky sour ?",
+    "Tequila Sunrise ?",
+    "Dry Martini ?"
     ],
     typeSpeed: 50,
     backSpeed: 50,
+    backDelay: 1500,
     loop: true
 });
   </script>
