minor change to the typed js header

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,8 +10,8 @@
 
 <br>
 <div class="container" style="text-align: left">
-  <h1 id="typed"> Wanna try </h1>
-  <h1>  our <strong><span class="type" style="background-color: #0D2848; color:#F8C559"> </span ></strong></h1>
+  <h1 id="typed"> Wanna try our</h1>
+  <h1><strong><span class="type" style="background-color: #0D2848; color:#F8C559"> </span ></strong></h1>
   <script >
     var typed = new Typed(".type", {
     strings: [
